--- a/index.html
+++ b/index.html
@@ -7,19 +7,20 @@
     <link rel="stylesheet" href="css/style.css">
     <title>GymLife</title>
     <script src="https://kit.fontawesome.com/e3df288b31.js" crossorigin="anonymous"></script>
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   </head>
   <body class="htmlBodyIndex">
     <header class="encabezado">
-      <h1 class="h1">GymLife</h1>
+      <h1 data-aos="fade-right" class="h1">GymLife</h1>
       <div class="cajaPrincipal">
       <div class="divNav">
           <nav class="navMenu">
             <ul class="nav__ul">
-             <li class="nav__li"><i class="fa-solid fa-house"></i><a href="index.html">Inicio</a></li>
-             <li class="nav__li"><i class="fa-solid fa-bicycle"></i><a href="rutinas.html">Rutinas</a></li>
-             <li class="nav__li"><i class="fa-solid fa-carrot"></i><a href="dietas.html">Dietas</a></li>
-             <li class="nav__li"><i class="fa-solid fa-dumbbell"></i><a href="musculacion.html">Musculacion</a></li>
-             <li class="nav__li"><i class="fa-solid fa-address-card"></i><a href="contacto.html">Contacto</a></li>
+             <li data-aos="zoom-in" class="nav__li"><i class="fa-solid fa-house"></i><a href="index.html">Inicio</a></li>
+             <li data-aos="zoom-in" class="nav__li"><i class="fa-solid fa-bicycle"></i><a href="rutinas.html">Rutinas</a></li>
+             <li data-aos="zoom-in" class="nav__li"><i class="fa-solid fa-carrot"></i><a href="dietas.html">Dietas</a></li>
+             <li data-aos="zoom-in" class="nav__li"><i class="fa-solid fa-dumbbell"></i><a href="musculacion.html">Musculacion</a></li>
+             <li data-aos="zoom-in" class="nav__li"><i class="fa-solid fa-address-card"></i><a href="contacto.html">Contacto</a></li>
             </ul>
       </div>
       </div>
@@ -28,7 +29,7 @@
 
   <main class="mainCaja">
   <div class="caja div">
-        <h2 class="caja h2">¿Quienes somos?</h2>
+        <h2 data-aos="flip-up" class="caja h2">¿Quienes somos?</h2>
  </div>
   <div class="caja parrafo">
         <p>
@@ -53,5 +54,12 @@
       </h5>
     </div>
     </footer>
+
+
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+      </script>
+
   </body>
 </html>
