añado librerias a todos los html

--- a/musculacion.html
+++ b/musculacion.html
@@ -5,20 +5,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Barras</title>
+    <script src="https://kit.fontawesome.com/e3df288b31.js" crossorigin="anonymous"></script>
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <!-- CSS -->
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body class="htmlBodyMusculacion">
-    <header>
-    
-        <h1 class="h1Musculacion">GymLife</h1>
-         <nav class="navContacto">
-               <li class="usoDisplayLine"><a href="index.html">Inicio</a></li>
-               <li class="usoDisplayLine"><a href="rutinas.html">Rutinas</a></li>
-               <li class="usoDisplayLine"><a href="dietas.html">Dietas</a></li>
-               <li class="usoDisplayLine"><a href="musculacion.html">Musculacion</a></li>
-               <li class="usoDisplayLine"><a href="contacto.html">Contacto</a></li>
-         </nav>
-     </header>
+  <header class="encabezado">
+    <h1 data-aos="fade-right" class="h1">GymLife</h1>
+    <div class="cajaPrincipal">
+    <div class="divNav">
+        <nav class="navMenu">
+          <ul class="nav__ul">
+           <li data-aos="zoom-in" class="nav__li"><i class="fa-solid fa-house"></i><a href="index.html">Inicio</a></li>
+           <li data-aos="zoom-in" class="nav__li"><i class="fa-solid fa-bicycle"></i><a href="rutinas.html">Rutinas</a></li>
+           <li data-aos="zoom-in" class="nav__li"><i class="fa-solid fa-carrot"></i><a href="dietas.html">Dietas</a></li>
+           <li data-aos="zoom-in" class="nav__li"><i class="fa-solid fa-dumbbell"></i><a href="musculacion.html">Musculacion</a></li>
+           <li data-aos="zoom-in" class="nav__li"><i class="fa-solid fa-address-card"></i><a href="contacto.html">Contacto</a></li>
+          </ul>
+    </div>
+    </div>
+  </div>
+  </header>
      <br><br>
      <main>
         <h2 class="h2Mancuerna">Mancuerna ajustable (mas discos 20kgs)</h2>
@@ -26,9 +34,9 @@
         <h2 class="h2Smith">Maquina Smith</h2>
         
         <div class="imagenes">
-        <img class="img1" src="../Proyecto/img/mancuernas.png" alt="foto de mancuernas">
-        <img class="img2" src="../Proyecto/img/barras.jpg" alt="Foto de barras">
-        <img class="img3" src="../Proyecto/img/maquina.jpg" alt="foto de maquina smith">
+        <img class="img1" src="img/mancuerna.png" alt="foto de mancuernas">
+        <img class="img2" src="img/barras.jpg" alt="Foto de barras">
+        <img class="img3" src="img/smiths.png" alt="foto de maquina smith">
         <h4 class="h4Mancuerna">25.000$</h4>
         <h4 class="h4Barra">50.000$</h4>
         <h4 class="h4Smith">100.000$</h4>
@@ -52,5 +60,12 @@
       </h5>
     </div>
     </footer>
+
+
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+      </script>
+
 </body>
 </html>
