--- a/rutinas.html
+++ b/rutinas.html
@@ -5,18 +5,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rutinas</title>
+    <script src="https://kit.fontawesome.com/e3df288b31.js" crossorigin="anonymous"></script>
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <!-- CSS -->
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body class="htmlBodyRutinas">
-    <header>
-      <h1 class="h1Rutinas">GymLife</h1>
-      <nav class="navContacto">
-        <li class="usoDisplayLine"><a href="index.html">Inicio</a></li>
-        <li class="usoDisplayLine"><a href="rutinas.html">Rutinas</a></li>
-        <li class="usoDisplayLine"><a href="dietas.html">Dietas</a></li>
-        <li class="usoDisplayLine"><a href="musculacion.html">Musculacion</a></li>
-        <li class="usoDisplayLine"><a href="contacto.html">Contacto</a></li>
-      </nav>
+     <header class="encabezado">
+      <h1 data-aos="fade-right" class="h1">GymLife</h1>
+      <div class="cajaPrincipal">
+      <div class="divNav">
+          <nav class="navMenu">
+            <ul class="nav__ul">
+             <li data-aos="zoom-in" class="nav__li"><i class="fa-solid fa-house"></i><a href="index.html">Inicio</a></li>
+             <li data-aos="zoom-in" class="nav__li"><i class="fa-solid fa-bicycle"></i><a href="rutinas.html">Rutinas</a></li>
+             <li data-aos="zoom-in" class="nav__li"><i class="fa-solid fa-carrot"></i><a href="dietas.html">Dietas</a></li>
+             <li data-aos="zoom-in" class="nav__li"><i class="fa-solid fa-dumbbell"></i><a href="musculacion.html">Musculacion</a></li>
+             <li data-aos="zoom-in" class="nav__li"><i class="fa-solid fa-address-card"></i><a href="contacto.html">Contacto</a></li>
+            </ul>
+      </div>
+      </div>
+    </div>
     </header>
 
     <br /><br />
