termino de usar los diseños para los html

--- a/dietas.html
+++ b/dietas.html
@@ -12,16 +12,16 @@
   </head>
   <body class="htmlBodyIndex">
     <header class="encabezado">
-      <h1 class="h1">GymLife</h1>
+      <h1 data-aos="fade-right" class="h1">GymLife</h1>
       <div class="cajaPrincipal">
       <div class="divNav">
           <nav class="navMenu">
             <ul class="nav__ul">
-             <li class="nav__li"><i class="fa-solid fa-house"></i><a href="index.html">Inicio</a></li>
-             <li class="nav__li"><i class="fa-solid fa-bicycle"></i><a href="rutinas.html">Rutinas</a></li>
-             <li class="nav__li"><i class="fa-solid fa-carrot"></i><a href="dietas.html">Dietas</a></li>
-             <li class="nav__li"><i class="fa-solid fa-dumbbell"></i><a href="musculacion.html">Musculacion</a></li>
-             <li class="nav__li"><i class="fa-solid fa-address-card"></i><a href="contacto.html">Contacto</a></li>
+             <li data-aos="zoom-in" class="nav__li"><i class="fa-solid fa-house"></i><a href="index.html">Inicio</a></li>
+             <li data-aos="zoom-in" class="nav__li"><i class="fa-solid fa-bicycle"></i><a href="rutinas.html">Rutinas</a></li>
+             <li data-aos="zoom-in" class="nav__li"><i class="fa-solid fa-carrot"></i><a href="dietas.html">Dietas</a></li>
+             <li data-aos="zoom-in" class="nav__li"><i class="fa-solid fa-dumbbell"></i><a href="musculacion.html">Musculacion</a></li>
+             <li data-aos="zoom-in" class="nav__li"><i class="fa-solid fa-address-card"></i><a href="contacto.html">Contacto</a></li>
             </ul>
       </div>
       </div>
@@ -56,5 +56,11 @@
       </h5>
     </div>
     </footer>
+
+
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+      </script>
   </body>
 </html>
