--- a/rutinas.html
+++ b/rutinas.html
@@ -31,7 +31,7 @@
     <br /><br />
     <main>
       <h2 class="h2Rutinas">Rutinas</h2>
-      <img class="img1Rutinas" src="../Proyecto/img/gym3.jpg" alt="Foto de rutina">
+      <img class="img1Rutinas" src="img/gym3.jpg" alt="Foto de rutina">
       <h4 class="h4Rutinas">En este apartado se podra pagar un servicio de rutinas personalizadas
         segun altura, objetivo, peso, entramiento previo,etc. A continuacion
         mostraremos algunos de nuestros servicios gratis</h4>
@@ -83,5 +83,10 @@
     </div>
     </footer>
 
+
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+      </script>
   </body>
 </html>
