--- a/musculacion.html
+++ b/musculacion.html
@@ -31,17 +31,55 @@
   </header>
      <br><br>
      <main>
-        <h2 class="h2Mancuerna">Mancuerna ajustable (mas discos 20kgs)</h2>
-        <h2 class="h2Barra">Barra Olimpica (20 kgs)</h2>
-        <h2 class="h2Smith">Maquina Smith</h2>
+      <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
+        <div class="carousel-indicators">
+          <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+          <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
+          <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        </div>
+        <div class="carousel-inner">
+          <div class="carousel-item active" data-bs-interval="10000">
+            <img src="img/smiths.png" class="d-block w-100 imgCarousel" alt="foto de maquina smith">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Maquina Smith</h5>
+              <p>100.000$</p>
+            </div>
+          </div>
+          <div class="carousel-item" data-bs-interval="2000">
+            <img src="img/barras.jpg" class="d-block w-100 imgCarousel" alt="Foto de barras">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Barra Olimpica (20 kgs)</h5>
+              <p>50.000$.</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="img/mancuerna.png" class="d-block w-100 imgCarousel" alt="foto de mancuernas">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Mancuerna ajustable (mas discos 20kgs)</h5>
+              <p>25.000$</p>
+            </div>
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
+        <!-- <h2 class="h2Mancuerna">Mancuerna ajustable (mas discos 20kgs)</h2> -->
+        <!-- <h2 class="h2Barra">Barra Olimpica (20 kgs)</h2> -->
+        <!-- <h2 class="h2Smith">Maquina Smith</h2> -->
         
-        <div class="imagenes">
-        <img class="img1" src="img/mancuerna.png" alt="foto de mancuernas">
-        <img class="img2" src="img/barras.jpg" alt="Foto de barras">
-        <img class="img3" src="img/smiths.png" alt="foto de maquina smith">
-        <h4 class="h4Mancuerna">25.000$</h4>
-        <h4 class="h4Barra">50.000$</h4>
-        <h4 class="h4Smith">100.000$</h4>
+        <!-- <div class="imagenes">
+        <img class="imgCarouselMusculacion" src="img/mancuerna.png" alt="foto de mancuernas">
+        <img class="imgCarouselMusculacion" src="img/barras.jpg" alt="Foto de barras">
+        <img class="imgCarouselMusculacion" src="img/smiths.png" alt="foto de maquina smith"> -->
+        <!-- <h4 class="h4Mancuerna">25.000$</h4> -->
+        <!-- <h4 class="h4Barra">50.000$</h4> -->
+        <!-- <h4 class="h4Smith">100.000$</h4> -->
       </div>
         
 
