añadi las cards musculacion.html

--- a/musculacion.html
+++ b/musculacion.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Barras</title>
+    <title>Musculacion</title>
     <!-- Librerias -->
     <script src="https://kit.fontawesome.com/e3df288b31.js" crossorigin="anonymous"></script>
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
@@ -31,43 +31,32 @@
   </header>
      <br><br>
      <main>
-      <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
-        <div class="carousel-indicators">
-          <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-          <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
-          <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
+    </div class="row">
+    <div class="card col-xl-3 col-md-2 col-sm-12" style="width: 18rem;">
+        <img src="img/barras.jpg" class="card-img-top" alt="Barra">
+        <div class="card-body">
+          <h5 class="card-title">Barra Olimpica (20 kgs)</h5>
+          <p class="card-text">50.000$</p>
+          <a href="#" class="btn btn-primary">Agregar al carrito</a>
         </div>
-        <div class="carousel-inner">
-          <div class="carousel-item active" data-bs-interval="10000">
-            <img src="img/smiths.png" class="d-block w-100 imgCarousel" alt="foto de maquina smith">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>Maquina Smith</h5>
-              <p>100.000$</p>
-            </div>
-          </div>
-          <div class="carousel-item" data-bs-interval="2000">
-            <img src="img/barras.jpg" class="d-block w-100 imgCarousel" alt="Foto de barras">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>Barra Olimpica (20 kgs)</h5>
-              <p>50.000$.</p>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <img src="img/mancuerna.png" class="d-block w-100 imgCarousel" alt="foto de mancuernas">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>Mancuerna ajustable (mas discos 20kgs)</h5>
-              <p>25.000$</p>
-            </div>
-          </div>
+      </div>
+    </div>
+    <div class="card col-xl-3 col-md-2 col-sm-12" style="width: 18rem;">
+        <img src="img/mancuernas.png" class="card-img-top" alt="Mancuernas">
+        <div class="card-body">
+          <h5 class="card-title">Mancuerna ajustable (mas discos 20kgs)</h5>
+          <p class="card-text">25.000$</p>
+          <a href="#" class="btn btn-primary">Agregar al carrito</a>
         </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
-        </button>
+      </div>
+    </div>
+    <div class="card col-xl-3 col-md-2 col-sm-12" style="width: 18rem;">
+        <img src="img/smiths.png" class="card-img-top" alt="Smith">
+        <div class="card-body">
+          <h5 class="card-title">Maquina Smith</h5>
+          <p class="card-text">100.000$</p>
+          <a href="#" class="btn btn-primary">Agregar al carrito</a>
+        </div>
       </div>
         <!-- <h2 class="h2Mancuerna">Mancuerna ajustable (mas discos 20kgs)</h2> -->
         <!-- <h2 class="h2Barra">Barra Olimpica (20 kgs)</h2> -->
