Agrego Hero a index, Termino con musculacion

--- a/index.html
+++ b/index.html
@@ -28,9 +28,51 @@
       </div>
       </div>
     </div>
+    <div class="b-example-divider"></div>
+
+    <div class="container">
+      <header class="d-flex justify-content-center py-3">
+        <ul class="nav nav-pills">
+          <li class="nav-item"><a href="#" class="nav-link active" aria-current="page">Home</a></li>
+          <li class="nav-item"><a href="#" class="nav-link">Features</a></li>
+          <li class="nav-item"><a href="#" class="nav-link">Pricing</a></li>
+          <li class="nav-item"><a href="#" class="nav-link">FAQs</a></li>
+          <li class="nav-item"><a href="#" class="nav-link">About</a></li>
+        </ul>
+      </header>
+    </div>
     </header>
 
   <main class="mainCaja">
+    <div class="container col-xl-10 col-xxl-8 px-4 py-5">
+      <div class="row align-items-center g-lg-5 py-5">
+        <div class="col-lg-7 text-center text-lg-start">
+          <h1 class="display-4 fw-bold lh-1 mb-3">GymLife</h1>
+          <p class="col-lg-10 fs-4">Somos un negocio familiar, creado en pandemia, que tiene como finalidad incentivar la actividad deportiva, ofreciendo artículos de alta calidad a un precio que permita a todos y cada uno acceder a ellos.
+            Nos distingue la cercanía con nuestros clientes, la atención personalizada que brindamos y la rapidez en la entrega de nuestros implementos, ofreciendo el mejor servicio para que puedas elegir de la mejor manera.</p>
+        </div>
+        <div class="col-md-10 mx-auto col-lg-5">
+          <form class="p-4 p-md-5 border rounded-3 bg-light">
+            <div class="form-floating mb-3">
+              <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
+              <label for="floatingInput">Email</label>
+            </div>
+            <div class="form-floating mb-3">
+              <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
+              <label for="floatingPassword">Contraseña</label>
+            </div>
+            <div class="checkbox mb-3">
+              <label>
+                <input type="checkbox" value="remember-me"> Recuerdame
+              </label>
+            </div>
+            <button class="w-100 btn btn-lg btn-primary" type="submit">Ingresar</button>
+            <hr class="my-4">
+            <small class="text-muted">Una vez que ingreses, estaras aceptando los terminos de uso.</small>
+          </form>
+        </div>
+      </div>
+    </div>
   <div class="caja div">
         <h2 data-aos="flip-up" class="caja h2">¿Quienes somos?</h2>
  </div>
