--- a/musculacion.html
+++ b/musculacion.html
@@ -31,7 +31,7 @@
   </header>
      <br><br>
      <main>
-    </div class="row">
+    </div class="grid text-center">
     <div class="card col-xl-3 col-md-2 col-sm-12" style="width: 18rem;">
         <img src="img/barras.jpg" class="card-img-top" alt="Barra">
         <div class="card-body">
