Agrego navbar a todos los html

--- a/rutinas.html
+++ b/rutinas.html
@@ -13,21 +13,31 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body class="htmlBodyRutinas">
-     <header class="encabezado">
-      <h1 data-aos="fade-right" class="h1">GymLife</h1>
-      <div class="cajaPrincipal">
-      <div class="divNav">
-          <nav class="navMenu">
-            <ul class="nav__ul">
-             <li data-aos="zoom-in" class="nav__li"><i class="fa-solid fa-house"></i><a href="index.html">Inicio</a></li>
-             <li data-aos="zoom-in" class="nav__li"><i class="fa-solid fa-bicycle"></i><a href="rutinas.html">Rutinas</a></li>
-             <li data-aos="zoom-in" class="nav__li"><i class="fa-solid fa-carrot"></i><a href="dietas.html">Dietas</a></li>
-             <li data-aos="zoom-in" class="nav__li"><i class="fa-solid fa-dumbbell"></i><a href="musculacion.html">Musculacion</a></li>
-             <li data-aos="zoom-in" class="nav__li"><i class="fa-solid fa-address-card"></i><a href="contacto.html">Contacto</a></li>
-            </ul>
+    <header class="p-3 text-bg-dark">
+      <div class="container">
+        <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
+          <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
+            <svg class="bi me-2" width="40" height="32" role="img" aria-label="Bootstrap"><use xlink:href="#bootstrap"/></svg>
+          </a>
+  
+          <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
+            <li><a href="index.html" class="nav-link px-2 text-secondary">Inicio</a></li>
+            <li><a href="rutinas.html" class="nav-link px-2 text-white">Rutinas</a></li>
+            <li><a href="musculacion.html" class="nav-link px-2 text-white">Musculacion</a></li>
+            <li><a href="dietas.html" class="nav-link px-2 text-white">Dietas</a></li>
+            <li><a href="contacto.html" class="nav-link px-2 text-white">Contacto</a></li>
+          </ul>
+  
+          <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" role="search">
+            <input type="search" class="form-control form-control-dark text-bg-dark" placeholder="Buscar" aria-label="Search">
+          </form>
+  
+          <div class="text-end">
+            <button type="button" class="btn btn-outline-light me-2">Ingresar</button>
+            <button type="button" class="btn btn-warning">Registrarse</button>
+          </div>
+        </div>
       </div>
-      </div>
-    </div>
     </header>
 
     <br /><br />
