finalizo bootstrap en el index y musculacion

--- a/musculacion.html
+++ b/musculacion.html
@@ -21,9 +21,9 @@
         </a>
 
         <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-          <li><a href="index.html" class="nav-link px-2 text-secondary">Inicio</a></li>
+          <li><a href="index.html" class="nav-link px-2 text-white">Inicio</a></li>
           <li><a href="rutinas.html" class="nav-link px-2 text-white">Rutinas</a></li>
-          <li><a href="musculacion.html" class="nav-link px-2 text-white">Musculacion</a></li>
+          <li><a href="musculacion.html" class="nav-link px-2 text-secondary">Musculacion</a></li>
           <li><a href="dietas.html" class="nav-link px-2 text-white">Dietas</a></li>
           <li><a href="contacto.html" class="nav-link px-2 text-white">Contacto</a></li>
         </ul>
@@ -42,7 +42,7 @@
      <br><br>
      <main>
     </div class="grid text-center">
-    <div class="card col-xl-3 col-md-2 col-sm-12" style="width: 18rem;">
+    <div class="card g-col-6 g-col-md-4" style="width: 18rem;">
         <img src="img/barras.jpg" class="card-img-top" alt="Barra">
         <div class="card-body">
           <h5 class="card-title">Barra Olimpica (20 kgs)</h5>
@@ -51,7 +51,7 @@
         </div>
       </div>
     </div>
-    <div class="card col-xl-3 col-md-2 col-sm-12" style="width: 18rem;">
+    <div class="card g-col-6 g-col-md-4" style="width: 18rem;">
         <img src="img/mancuernas.png" class="card-img-top" alt="Mancuernas">
         <div class="card-body">
           <h5 class="card-title">Mancuerna ajustable (mas discos 20kgs)</h5>
@@ -60,7 +60,7 @@
         </div>
       </div>
     </div>
-    <div class="card col-xl-3 col-md-2 col-sm-12" style="width: 18rem;">
+    <div class="card g-col-6 g-col-md-4" style="width: 18rem;">
         <img src="img/smiths.png" class="card-img-top" alt="Smith">
         <div class="card-body">
           <h5 class="card-title">Maquina Smith</h5>
