--- a/rutinas.html
+++ b/rutinas.html
@@ -21,8 +21,8 @@
           </a>
   
           <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-            <li><a href="index.html" class="nav-link px-2 text-secondary">Inicio</a></li>
-            <li><a href="rutinas.html" class="nav-link px-2 text-white">Rutinas</a></li>
+            <li><a href="index.html" class="nav-link px-2 text-white">Inicio</a></li>
+            <li><a href="rutinas.html" class="nav-link px-2 text-secondary">Rutinas</a></li>
             <li><a href="musculacion.html" class="nav-link px-2 text-white">Musculacion</a></li>
             <li><a href="dietas.html" class="nav-link px-2 text-white">Dietas</a></li>
             <li><a href="contacto.html" class="nav-link px-2 text-white">Contacto</a></li>
