--- a/index.html
+++ b/index.html
@@ -79,6 +79,27 @@
         relacionado al mundo del fitness,que tiene como finalidad incentivar la actividad deportiva.
         </p>
    </div>
+   <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+    <div class="carousel-inner">
+      <div class="carousel-item active imgCarousel">
+        <img src="img/gymlifeindex1.jpg" class="d-block w-100" alt="imggym1">
+      </div>
+      <div class="carousel-item imgCarousel">
+        <img src="img/gymlifeindex2.jpg" class="d-block w-100" alt="imggym2">
+      </div>
+      <div class="carousel-item imgCarousel">
+        <img src="img/gymlifeindex3.jpg" class="d-block w-100" alt="imggym3">
+      </div>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+  </div>
  </main>
        
     <footer class="footer">
