transf, musculacion.html

--- a/index.html
+++ b/index.html
@@ -15,6 +15,13 @@
   <body class="htmlBodyIndex">
     <header class="p-3 text-bg-dark">
       <div class="container">
+        <nav class="navbar bg-light">
+          <div class="container">
+            <a class="navbar-brand" href="#">
+              <img src="/docs/5.2/assets/brand/bootstrap-logo.svg" alt="" width="30" height="24">
+            </a>
+          </div>
+        </nav>
         <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
           <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
             <svg class="bi me-2" width="40" height="32" role="img" aria-label="Bootstrap"><use xlink:href="#bootstrap"/></svg>
@@ -41,6 +48,7 @@
     </header>
 
   <main class="mainCaja">
+ 
     <div class="container col-xl-10 col-xxl-8 px-4 py-5">
       <div class="row align-items-center g-lg-5 py-5">
         <div class="col-lg-7 text-center text-lg-start">
