--- a/musculacion.html
+++ b/musculacion.html
@@ -41,8 +41,8 @@
   </header>
      <br><br>
      <main>
-    </div class="grid text-center">
-    <div class="card g-col-6 g-col-md-4" style="width: 18rem;">
+    </div class="d-flex justify-content-center">
+    <div data-aos="fade-right" class="card justify-content-center" style="width: 18rem;">
         <img src="img/barras.jpg" class="card-img-top" alt="Barra">
         <div class="card-body">
           <h5 class="card-title">Barra Olimpica (20 kgs)</h5>
@@ -51,7 +51,7 @@
         </div>
       </div>
     </div>
-    <div class="card g-col-6 g-col-md-4" style="width: 18rem;">
+    <div data-aos="fade-right" class="card d-flex justify-content-center" style="width: 18rem;">
         <img src="img/mancuernas.png" class="card-img-top" alt="Mancuernas">
         <div class="card-body">
           <h5 class="card-title">Mancuerna ajustable (mas discos 20kgs)</h5>
@@ -60,7 +60,7 @@
         </div>
       </div>
     </div>
-    <div class="card g-col-6 g-col-md-4" style="width: 18rem;">
+    <div data-aos="fade-right" class="card d-flex justify-content-center" style="width: 18rem;">
         <img src="img/smiths.png" class="card-img-top" alt="Smith">
         <div class="card-body">
           <h5 class="card-title">Maquina Smith</h5>
